# openmsimodel

./: .gitignore  .readthedocs.yaml  Dockerfile  MANIFEST.in  README.md  _requirements.txt  folder.py  old_requirements.txt  pyproject.toml  requirements.txt  setup.py  tools.py
.circleci/: config.yml
.github/workflows/: pypi-docker-rtd.yml  pypi-docker.yml
attr_utils/: base_special_attrs.py  grp_attrs.py  utils.py
block/: Block.py
docs/: .readthedocs.yml
docs/source/: conf.py  index.rst
entity/: __init__.py
entity/base/: __init__.py  attributes.py  base_node.py  ingredient.py  material.py  measurement.py  process.py  process_or_measurement.py  typing.py
entity/materials/: __init__.py  starting_materials.py  terminal_material.py
entity/processes/: buy_starting_materials.py  homogenization.py
examples/backend/: api.ipynb  gemd_element_api.ipynb
examples/bake/: bake.ipynb  bake.py  bidrected_cake_all.dot  bidrected_cake_all.graphml  bidrected_cake_run.graphml  cake_run.dot  cake_run.graphml  directed_cake_all.dot  directed_cake_all.graphml  example_gemd_material_history_v2.json  procuring-baking-powder-d576929a6c518c058db29324c13db0c3.dot  run_graph.dot
examples/birdshot/: birdshot.ipynb  bo.ipynb  saved_birdshot_example.csv  saved_bo.ipynb  template.ipynb
examples/docs/: example.ipynb
examples/laser_shock/: laser_shock.ipynb
examples/materials_data/: example.ipynb  (+5 more)
openmsimodel/: __init__.py
openmsimodel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test/: run_all_tests.py  test_example_1a.py  test_example_1b.py
utilities/: tools.py
workflow/: Folder.py  TAMUWorkflow.py  Workflow.py  folder_or_file.py  tamu_workflow.py  test.txt  workflow.py
(+21738 files in other folders)
